# jz-rag-agent

./: .env.example  .gitignore  ASSIGNMENT.md  CLAUDE.md  README.md  evaluation_report.md  main.py  pyproject.toml
.claude/: settings.json
app/agents/: __init__.py  qa_agent.py  self_check_agent.py
app/chunkers/: __init__.py  semantic_chunker.py
app/core/: __init__.py  config_loader.py
app/parsers/: __init__.py  ocr_parser.py  pdf_classifier.py  pdf_parser.py  table_extractor.py
app/prompts/: qa_prompt.py
app/retrievers/: __init__.py  hybrid_retriever.py  vector_store.py
app/schemas/: __init__.py  common.py
app/services/: __init__.py  embedding_service.py  llm_service.py
configs/: __init__.py  config.yaml  default.yaml
data/: index_stats.json
scripts/: evaluate.py  test_parsers.py
tests/: test_chunker.py
tests/unit/: test_ocr_normalizer.py
